更新第一篇blog文章

--- a/content/post/202401.md
+++ b/content/post/202401.md
@@ -1,6 +1,6 @@
 ---
-title: "2024 总要勇敢一次吧（一）"
-description: 
+title: "2024 总要勇敢一次吧"
+description: "多肉桑桑的2024流浪日记"
 date: 2024-09-14T15:00:00Z
 image: 
 math: 
@@ -25,6 +25,14 @@ draft: false
 
 活动结束后，Bonjour有大量事务需要处理，我顺理成章成为了团队的staff之一。这份工作内容还是比较充实的，我承包了除了开发和产品的所有工作。
 
-八月初，对象和创业搭子吵了一架。于是，他便拉着我以及一个base上海的朋友连夜飞到了济州岛。这是我第一次出国，不过至今我的家长还不知道。不过我的建议是旅游还得慎重，这次旅行单纯我的账单就花了7k……
+八月初，对象和创业搭子吵了一架。于是，他便拉着我以及一个base上海的朋友连夜飞到了济州岛。这是我第一次出国，不过至今我的家长还不知道。
 
-（下文待续）
+九月中，我一个人去重庆当了24小时特种兵。（似乎是我第一次一个人出远门）不过很遗憾的是我当时刚拔完智齿，吃不了一点辣。
+
+十月初，对象贷了辆比亚迪，拉我去江西、武汉、安徽、南京转了一圈。听起来还行？就那样吧。但是因为一些难以调和的问题，我们就在十月份分手了。
+
+分手以后，正好公司需要搬迁，我就在附近自己租了一个小公寓。因为他和他的合伙人也有些感情不和，他就搬离了良渚。
+
+本来这篇post的名字是”2024 总要勇敢一次吧（一）“，但是我发现我写的续篇内容似乎没有新开一篇的必要，于是作罢。关于上一段感情经历，我还是不太想把它写在本post里。如果我哪天突然想写了，可能会新开一篇？以后的事情以后再说吧。
+
+Libra 完成于 Nov 20, 2024
