follow feed claim

--- a/content/post/202402.md
+++ b/content/post/202402.md
@@ -18,3 +18,5 @@ draft: false
 在这短短一年半的时间里，推友已经经历好几次换血了。有时候我想，或许我也该跑路了。正好这次第二个推特账号被冻结，那就这样吧。
 
 晚安桑桑
+
+This message is used to verify that this feed (feedId:78344689936660480) belongs to me (userId:55671549555668992). Join me in enjoying the next generation information browser https://follow.is.
