修改视频链接 x2
我是傻逼 才发现hugo自带嵌入的规范

--- a/content/post/202403.md
+++ b/content/post/202403.md
@@ -21,6 +21,6 @@ Hi，这里是桑桑！这里是我的年度总结~
 
 实在不知道说什么，那就再看一遍我的照片集吧~
 
-<iframe width="474" height="842" src="https://www.youtube.com/embed/DnAXYRjWyg8" title="在没有你的冬眠。" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+{{< video "https://cdn.libra.wiki/2024_summary.mp4" >}}
 
 最后，祝大家新年快乐！
